# Variant

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  Main.cpp  Point.cpp  StateMachine.cpp
src/include/: Point.hpp  StateMachine.hpp  Visitor.hpp
tests/: CMakeLists.txt  PointTest.cpp  hello_test.cpp
